<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

        <TextView
            android:id="@+id/importDialogFileNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/importDialogFileNameDefault"/>

        <TextView
            android:id="@+id/importDialogStatusValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/importDialogStatusDefault"/>

        <EditText
            android:id="@+id/importDialogFileNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/importDialogFileNameLabel"
            android:clickable="true"
            android:inputType="textUri"
            android:hint="@string/importDialogFileNameDefaultValue"
            android:text="@string/importDialogFileNameDefaultValue"/>

        <ProgressBar
            android:id="@+id/importDialogProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/importDialogFileNameValue"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/importDialogBikesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/importDialogProgressBar"
            android:layout_marginTop="20dp"
            android:text="@string/importDialogBikesLabel"/>

        <TextView
            android:id="@+id/importDialogBikesValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/importDialogBikesLabel"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_toEndOf="@+id/importDialogBikesLabel"
            android:layout_toRightOf="@+id/importDialogBikesLabel"
            android:text="@string/importDialogDefaultBikesDefault"/>

        <TextView
            android:id="@+id/importDialogTagTypesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/importDialogBikesLabel"
            android:layout_alignStart="@+id/importDialogBikesLabel"
            android:layout_below="@+id/importDialogBikesLabel"
            android:text="@string/importDialogTagTypesLabel"/>

        <TextView
            android:id="@+id/importDialogTagTypesValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/importDialogBikesValue"
            android:layout_alignRight="@+id/importDialogBikesValue"
            android:layout_below="@+id/importDialogBikesValue"
            android:text="@string/importDialogTagTypesDefault"/>

        <TextView
            android:id="@+id/importDialogTagsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/importDialogTagTypesLabel"
            android:layout_alignStart="@+id/importDialogTagTypesLabel"
            android:layout_below="@+id/importDialogTagTypesLabel"
            android:text="@string/importDialogTagsLabel"/>

        <TextView
            android:id="@+id/importDialogTagsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/importDialogTagTypesValue"
            android:layout_alignRight="@+id/importDialogTagTypesValue"
            android:layout_below="@+id/importDialogTagTypesValue"
            android:text="@string/importDialogTagsDefault"/>


        <TextView
            android:id="@+id/importDialogEventsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/importDialogTagsLabel"
            android:layout_alignStart="@+id/importDialogTagsLabel"
            android:layout_below="@+id/importDialogTagsLabel"
            android:text="@string/importDialogEventsLabel"/>

        <TextView
            android:id="@+id/importDialogEventsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/importDialogTagsValue"
            android:layout_alignRight="@+id/importDialogTagsValue"
            android:layout_below="@+id/importDialogTagsValue"
            android:text="@string/importDialogEventsDefault"/>

        <TextView
            android:id="@+id/importDialogMessageValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/importDialogEventsLabel"
            android:layout_centerVertical="true"
            android:layout_marginTop="25dp"
            android:text="@string/importDialogMessageDefault"/>

        <Button
            android:id="@+id/importDialogOkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/importDialogMessageValue"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:paddingBottom="25sp"
            android:paddingLeft="50sp"
            android:paddingRight="50sp"
            android:paddingTop="25sp"
            android:text="@string/buttonImport"/>

        <Button
            android:id="@+id/importDialogCloseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/importDialogMessageValue"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:paddingBottom="25sp"
            android:paddingLeft="50sp"
            android:paddingRight="50sp"
            android:paddingTop="25sp"
            android:text="@string/buttonCancel"/>


    </RelativeLayout>
</ScrollView>
