<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="5dp"
                android:scrollbars="vertical"
    >

    <TextView
        android:id="@+id/itemDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/dummyDate"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/itemTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/itemDate"
        android:layout_toEndOf="@+id/itemDate"
        android:layout_toRightOf="@+id/itemDate"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/dummyTime"
        android:textSize="15sp"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/itemDiffDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/itemDiffDistanceUnit"
        android:layout_toLeftOf="@+id/itemDiffDistanceUnit"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:text="@string/dummyDistance"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/itemDiffDistanceUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/itemDiffDistance"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/DistanceUnit"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/itemDiffDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/itemDiffDistance"
        android:text="@string/dummyDuration"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/itemDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/itemDate"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:text="@string/dummyDistance"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/itemDistanceUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/itemDistance"
        android:layout_toEndOf="@+id/itemDistance"
        android:layout_toRightOf="@+id/itemDistance"
        android:text="@string/DistanceUnit"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/itemTagName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/itemDistance"
        android:text="@string/labelTagsName"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/itemEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemTagName"
        android:text="@string/dummyMemo"
        />
</RelativeLayout>
