<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/event_detail_bike_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/button_material_light"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/dummyHeader"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:id="@+id/event_detail_name_label"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/labelName"
                />

            <EditText
                android:id="@+id/event_detail_name"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/event_detail_name_label"
                android:layout_marginTop="10dp"
                android:hint="@string/labelEventName"
                android:inputType="text"
                android:paddingBottom="10dp"
                android:textIsSelectable="true"/>

            <TextView
                android:id="@+id/event_detail_date_label"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/event_detail_name"
                android:layout_marginTop="10dp"
                android:labelFor="@+id/event_detail_date"
                android:paddingBottom="10dp"
                android:paddingRight="60dp"

                android:paddingTop="20dp"
                android:text="@string/labelDate"/>


            <EditText
                android:id="@+id/event_detail_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/event_detail_date_label"
                android:layout_toEndOf="@+id/event_detail_date_label"
                android:layout_toRightOf="@+id/event_detail_date_label"
                android:clickable="true"
                android:ems="10"
                android:enabled="true"
                android:focusable="true"
                android:inputType="date|none"
                android:text="@string/dummyDate"
                tools:ignore="TextFields"/>


            <TextView
                android:id="@+id/event_detail_distance_label"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/event_detail_date_label"
                android:layout_marginTop="10dp"
                android:labelFor="@+id/event_detail_distance"
                android:paddingBottom="5dp"
                android:paddingTop="20dp"
                android:text="@string/labelDistance"
                />


            <EditText
                android:id="@+id/event_detail_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/event_detail_distance_label"
                android:layout_alignLeft="@+id/event_detail_date"
                android:layout_alignStart="@+id/event_detail_date"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="@string/dummyDistance"/>

            <TextView
                android:id="@+id/event_detail_distance_unit"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/event_detail_distance_label"
                android:layout_toRightOf="@+id/event_detail_distance"
                android:paddingBottom="5dp"
                android:paddingTop="20dp"
                android:text="@string/km"/>


            <TextView
                android:id="@+id/event_detail_tag_label"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/event_detail_distance_label"
                android:layout_marginTop="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="20dp"
                android:text="@string/labelTag"
                />

            <Spinner
                android:id="@+id/event_detail_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/event_detail_date"
                android:layout_alignStart="@+id/event_detail_date"
                android:layout_alignTop="@+id/event_detail_tag_label"
                android:layout_toEndOf="@+id/event_detail_tag_label"
                android:layout_toRightOf="@+id/event_detail_tag_label"/>

            <Button
                android:id="@+id/event_detail_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event_detail_tag_label"
                android:layout_marginTop="40dp"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/buttonSave"
                />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>