<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="de.egh.bikehist.ui.masterdata.MasterDataDetailFragment">

    <TextView
        android:id="@+id/master_data_fragment_item_detail_bike_name_label"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="5dp"
        android:paddingTop="20dp"
        android:text="@string/labelName"/>

    <EditText
        android:id="@+id/master_data_fragment_item_detail_bike_name"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/master_data_fragment_item_detail_bike_name_label"
        android:hint="@string/labelBikesName"
        android:inputType="text"
        android:textIsSelectable="true"/>

    <TextView
        android:id="@+id/master_data_fragment_item_detail_bike_frame_number_label"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/master_data_fragment_item_detail_bike_name"
        android:paddingBottom="5dp"
        android:paddingTop="40dp"
        android:text="@string/frameNumber"/>

    <EditText
        android:id="@+id/master_data_fragment_item_detail_bike_frame_number"
        style="?android:attr/textAppearanceLarge"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/master_data_fragment_item_detail_bike_frame_number_label"
        android:hint="@string/frameNumber"
        android:inputType="text"
        android:textIsSelectable="true"
        tools:ignore="TextFields"/>

    <Button
        android:id="@+id/master_data_fragment_item_detail_bike_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/master_data_fragment_item_detail_bike_frame_number"
        android:layout_marginTop="40dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/buttonSave"
        />

</RelativeLayout>
