<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/drawer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/eghDrawerBackground"
    android:clickable="true"
    tools:showIn="@layout/drawer_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/bikes"
            android:textColor="@color/eghDrawerText"
            android:textSize="@dimen/eghDrawerHeader"
            android:textStyle="bold"
            />

        <ListView
            android:id="@+id/drawerBikeList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/tagTypes"
            android:textColor="@color/eghDrawerText"
            android:textSize="@dimen/eghDrawerHeader"
            android:textStyle="bold"
            />

        <ListView
            android:id="@+id/drawerTagTypeList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/tags"
            android:textColor="@color/eghDrawerText"
            android:textSize="@dimen/eghDrawerHeader"
            android:textStyle="bold"
            />

        <ListView
            android:id="@+id/drawerTagList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="multipleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"/>

    </LinearLayout>
</ScrollView>